Wrap each section and its heading in 'div.nowrap' to prevent page-breaks between main headings and their content; Array-ify the partials list in resume.haml in order to do so

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -19,6 +19,9 @@ h1, h2, h3, h4, h5
   list-style-type: none
   padding: 0
 
+.nobreak
+  page-break-inside: avoid
+
 table
   border: 0
   border-spacing: 0
